Trying to fix some alignment issues

--- a/diffeqguide/courses/course_styles.css
+++ b/diffeqguide/courses/course_styles.css
@@ -39,7 +39,7 @@
   z-index: 1; /* Stay on top */
   top: 0; /* Stay at the top */
   left: 10;
-  background-color: #111; /* Black */
+  background-color: #4d7ab8; /* Black */
   overflow-x: hidden; /* Disable horizontal scroll */
   padding-top: 20px;
 }
@@ -60,7 +60,8 @@
 
 /* Style page content */
 .main {
-  margin-left: 160px; /* Same as the width of the sidebar */
+  /*margin-left: 160px;  Same as the width of the sidebar */
+  text-align: left;
   padding: 0px 10px;
 }
 
@@ -78,7 +79,7 @@
 
 .section-listing >  li {
 	counter-increment: section;
-	    counter-reset: item -1;
+	    counter-reset: item 0;
 }
 
 .section-listing li:before {
